<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/cono"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/baseCono"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="145dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:text="@string/alturaCono"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="145dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:text="Button" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:text="Button" />
    </LinearLayout>

</LinearLayout>